canvas disabled for other players | chnat overflow fixed | Join on enter button press

--- a/FrontEnd/src/Components/Chat/Chat.css
+++ b/FrontEnd/src/Components/Chat/Chat.css
@@ -1,57 +1,15 @@
-.chat_main {
-    margin: 0px;
-    background-color: rgb(222, 249, 204);
-    width: 210px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    border: 2px solid black;
-    height: 450px;
-    margin-top: 20px;
-    border-radius: 6px;
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 2px;
 }
 
-.messages {
-    display: flex;
-    flex-direction: column-reverse; 
-    flex: 1;
-    width: 100%;
-    overflow-y: auto;
-    padding: 10px;
-    box-sizing: border-box;
-    border-radius: 6px;
+::-webkit-scrollbar-track {
+    background: #ffffff;
+    border-radius: 10px;
 }
 
-.sendChat {
-    display: flex;
-    width: 100%;
-}
-
-.sendChat input {
-    flex: 1;
-    padding: 5px;
-    width: 144px;
-    border-radius: 4px;
-    border: none;
-    font-size: 14px;
-    font-family: 'Courier New', Courier, monospace;
-}
-
-.sendChat button {
-    padding: 3px;
-    border-radius: 6px;
-    font-family: 'Courier New', Courier, monospace;
-    border: 1px solid rgb(213, 213, 213);
-}
-
-.newMessages{
-    padding: 10px;
-    margin: 0px;
-}
-
-.messages::-webkit-scrollbar {
-    width: 10px; 
-    background-color: rgb(155, 255, 187);
-    border-radius: 1px;
+::-webkit-scrollbar-thumb {
+    background: #8492ff;
+    border-radius: 10px;
 }
